--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -51,7 +51,7 @@
                     <div>
                         <div class="team-member">
                             <img class="mx-auto rounded-circle1" src="assets/img/profile/pragati.webp" alt="pragati profile image" />
-                            <p class="text-muted">Software Enginner</p>
+                            <p class="text-muted">Software Engineer</p>
                             <a class="btn btn-dark btn-social mx-2" href="http://github.com/Pragati-Gawande/" target="_blank"><i class="fab fa-github"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/pragati-gawande-9ba91416b/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/gawande_pragati" target="_blank"><i class="fab fa-twitter"></i></a>
